# bonefate

./: .gitignore  app.py  pyproject.toml  readme.md
bonefate/: __init__.py  bonefate.py
bonefate/cli/: main.py
